--- a/package.json
+++ b/package.json
@@ -14,6 +14,12 @@
   },
   "dependencies": {
     "gatsby": "^2.13.31",
+    "gatsby-image": "^2.2.6",
+    "gatsby-plugin-sharp": "^2.2.8",
+    "gatsby-plugin-transition-link": "^1.12.4",
+    "gatsby-source-filesystem": "^2.1.5",
+    "gatsby-transformer-json": "^2.2.2",
+    "gatsby-transformer-sharp": "^2.2.4",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
   },
