--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gatsby-source-filesystem": "^2.1.5",
     "gatsby-transformer-json": "^2.2.2",
     "gatsby-transformer-sharp": "^2.2.4",
+    "gsap": "^2.1.3",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
   },
